# undoc

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  pages.yml  release.yml
bindings/csharp/Undoc/: Undoc.csproj
bindings/python/: pyproject.toml
bindings/wasm/: README.md
cli/: Cargo.toml
docs/: index.html
src/: container.rs  decode.rs  detect.rs  lib.rs  streaming.rs
src/docx/: parser.rs
src/model/: paragraph.rs  resource.rs  table.rs
src/pptx/: parser.rs
src/render/: markdown.rs  text.rs
src/xlsx/: parser.rs
undoc-wasm/: Cargo.toml
undoc-wasm/src/: document.rs  lib.rs
