[package]
name = "undoc-wasm"
version = "0.4.0"
edition = "2021"
description = "High-performance Office document extraction to Markdown (WebAssembly)"
repository = "https://github.com/iyulab/undoc"
license = "MIT"
keywords = ["docx", "xlsx", "pptx", "wasm", "webassembly"]
categories = ["wasm", "parser-implementations"]

[lib]
crate-type = ["cdylib"]

[dependencies]
undoc = { path = ".." }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde_json = "1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"
